RESOLVED FIXED63061
Web Inspector: Attached state changes do not affect the drawer height
https://bugs.webkit.org/show_bug.cgi?id=63061
Summary Web Inspector: Attached state changes do not affect the drawer height
Alexander Pavlov (apavlov)
Reported 2011-06-21 03:38:38 PDT
On the WebInspector.attached property changes the toolbar height changes but a drawer in the Console panel mode does not update its height. This is one part of http://code.google.com/p/chromium/issues/detail?id=74969
Attachments
[PATCH] Suggested fix (3.49 KB, patch)
2011-06-21 03:45 PDT, Alexander Pavlov (apavlov)
webkit.review.bot: commit-queue-
Archive of layout-test-results from ec2-cr-linux-03 (1.58 MB, application/zip)
2011-06-21 03:54 PDT, WebKit Review Bot
no flags
[PATCH] Chromium tests fixed (3.41 KB, patch)
2011-06-21 04:12 PDT, Alexander Pavlov (apavlov)
no flags
Alexander Pavlov (apavlov)
Comment 1 2011-06-21 03:45:12 PDT
Created attachment 97958 [details] [PATCH] Suggested fix
WebKit Review Bot
Comment 2 2011-06-21 03:54:16 PDT
Comment on attachment 97958 [details] [PATCH] Suggested fix Attachment 97958 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/8912837 New failing tests: http/tests/inspector/console-xhr-logging.html http/tests/inspector/network/network-xhr-sync.html http/tests/inspector/network/network-iframe-load-and-delete.html http/tests/inspector/network/download.html http/tests/inspector-enabled/console-clear-arguments-on-frame-remove.html http/tests/inspector/inspect-iframe-from-different-domain.html http/tests/inspector-enabled/console-log-before-frame-navigation.html http/tests/inspector/network/ping.html http/tests/inspector/network/network-open-load-reopen.html http/tests/inspector/network/network-xhr-async.html http/tests/inspector/network-preflight-options.html http/tests/inspector/network/network-close-load-open.html http/tests/inspector-enabled/database-open.html http/tests/inspector-enabled/dom-storage-open.html http/tests/inspector/network/x-frame-options-deny.html http/tests/inspector/console-resource-errors.html http/tests/inspector/resource-parameters.html http/tests/inspector/resource-har-conversion.html http/tests/inspector/network/network-clear-after-disabled.html http/tests/inspector/change-iframe-src.html
WebKit Review Bot
Comment 3 2011-06-21 03:54:21 PDT
Created attachment 97959 [details] Archive of layout-test-results from ec2-cr-linux-03 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-03 Port: Chromium Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Alexander Pavlov (apavlov)
Comment 4 2011-06-21 04:12:18 PDT
Created attachment 97960 [details] [PATCH] Chromium tests fixed
WebKit Review Bot
Comment 5 2011-06-21 05:38:13 PDT
Comment on attachment 97960 [details] [PATCH] Chromium tests fixed Clearing flags on attachment: 97960 Committed r89348: <http://trac.webkit.org/changeset/89348>
WebKit Review Bot
Comment 6 2011-06-21 05:38:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.