Update DevTools window docked state if cannot dock

An https://bugs.webkit.org/show_bug.cgi?id=63061 fix in the Chromium tree is required for this patch to take effect.

R=pfeldman@chromium.org
BUG=74969
TEST=scenario described in the bug (with the devtools window attached before closing)

Review URL: http://codereview.chromium.org/7223001

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@89822 0039d316-1c4b-4281-b951-d872f2087c98