chrome/browser/debugger/devtools_window.cc
@@ -160,6 +160,7 @@ void DevToolsWindow::Show(DevToolsToggleAction action) {
     } else {
       // Sometimes we don't know where to dock. Stay undocked.
       docked_ = false;
+      UpdateFrontendAttachedState();
     }
   }
 
